<resources>
	<string name="app_name">Songbits</string>
	<string name="title_oldhome">Old Home</string>
	<string name="title_demo">Demo Spotify SDK</string>
	<string name="app_description">a simply fabulous \nplaylist maker</string>
	<string name="loading">loading...</string>
	<string name="app_about">about</string>

	<string name="title_home">Real Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>

	<string name="tab_title_home">Playlists</string>
	<string name="tab_title_stash">Tracks</string>
	<string name="tab_title_profile">Profile</string>

	<string name="title_stash_frag">Tracks Curator</string>
	<string name="description_stash_frag">Check out the likes and dislikes you\'ve swiped so far,
		create new playlists, and explore your top tracks from Spotify</string>
	<string name="title_profile_frag">Profile</string>
	<string name="profile_subtitle">My Jukebox Machine</string>

	<string name="com_spotify_sdk_redirect_scheme">songbits</string>
	<string name="com_spotify_sdk_redirect_host">callback</string>

	<string name="title_activity_demo">Spotify Android SDK Demo</string>
	<string name="login_button_label">Login</string>
	<string name="logout_button_label">Logout</string>
	<string name="play_track_button_label">Track</string>
	<string name="play_playlist_button_label">Playlist</string>
	<string name="play_mono_track_button_label">Play mono track</string>
	<string name="play_48khz_track_button_label">Play 48kHz track</string>
	<string name="play_album_button_label">Album</string>
	<string name="pause_button_label_toggle">Pause/Resume</string>
	<string name="skip_next_button_label">Next</string>
	<string name="skip_prev_button_label">Previous</string>
	<string name="toggle_shuffle_button_toggle">Toggle shuffle</string>
	<string name="toggle_repeat_button_label_toggle">Toggle repeat</string>
	<string name="seek_button_label">Seek</string>
	<string name="queue_button_label">Queue a song</string>
	<string name="song_queued_toast">Song queued!</string>
	<string name="high_bitrate_button_label">320kbps</string>
	<string name="normal_bitrate_button_label">160kbps</string>
	<string name="low_bitrate_button_label">96kbps</string>
	<string name="no_metadata">no metadata</string>

	<!-- fab stuff -->
	<string name="playlist_image_transition">shared_element_image</string>
	<string name="playlist_fab_transition">shared_element_fab</string>
	<string name="fab_swipe_remaining">swipe\n%1$d left</string>
	<string name="fab_swipe_all">reswipe\nall</string>
	<string name="fab_create">create\nplaylist</string>
	<string name="fab_clear">clear</string>
	<string name="fab_fetch_recommendations">get recs</string>

	<!-- home stuff -->
	<string name="home_see_more">See more</string>
	<string name="playlist_section_recent">Recent playlists</string>
	<string name="playlist_section_recommended">Recommended playlists</string>
	<string name="playlist_section_featured">Featured playlists</string>

	<!-- playlist card stuff -->
	<string name="expand_tracks">expand tracks (%1$d count)</string>
	<string name="expand_tracks_default">no tracks swiped yet</string>
	<string name="create_expand_tracks">playlist tracks</string>
	<string name="create_card_label">Nice! Create a new playlist</string>
	<string name="create_card_label_2">with these %1$d tracks!</string>
	<string name="new_playlist_description">via songbits</string>
	<string name="dialog_stash_title">Stash the swipes you\'ve made so far?</string>
	<string name="dialog_stash_content">They\'ll be saved in your Likes and Dislikes in
		your Stash tab, so you can change your prefs or create playlists from them at any time.</string>
	<string name="dialog_stash_confirm">Sure</string>
	<string name="dialog_stash_reject">Nah</string>

	<!-- simple card stuff -->
	<string name="likes_card_title">likes</string>
	<string name="dislikes_card_title">dislikes</string>
	<string name="top_tracks_card_title">top tracks</string>
	<string name="recommended_tracks_card_title">recommended</string>

	<!-- summary stuff -->
	<string name="summary_title">Awesome! You liked %1$d and disliked %2$d tracks!</string>
	<string name="summary_subtitle">Would you like to…</string>
	<string name="summary_subtitle_two">Summary Card</string>
	<string name="summary_create_playlist">Create a new playlist out of your Likes</string>
	<string name="summary_stash_swipes">Stash your swipes (they’ll be saved in your Tracks tab)</string>
	<string name="summary_review_swipes">Edit your swipes</string>
	<string name="action_error">Something went wrong :(</string>
	<string name="save_success_cta">Success!\nTap to go to your stash</string>
	<string name="create_success_cta">Success!\nTap to go to your playlists</string>
	<string name="create_disabled">No liked tracks - like one to create a playlist!</string>

	<!-- profile stuff -->
	<string name="action_get_recommended">get recommended tracks</string>
	<string name="action_reset_recommended">reset</string>
	<string name="expand_seed_genres">Now pick 1-5 genre seeds</string>
	<string name="show_seed_genres">show genres</string>
	<string name="action_random_genres"><u>random 5</u></string>

	<!-- stats stuff -->
	<string name="stats_least">not at all %1$s</string>
	<string name="stats_less">less %1$s</string>
	<string name="stats_med">more %1$s</string>
	<string name="stats_highest">super %1$s</string>

</resources>
