<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/fab_menu_items"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>

	<!-- fetch tracks based on current stats-->
	<item
		android:id="@+id/menu_fetch_recommended"
		android:icon="@drawable/note_happy_colored"
		android:title="@string/fab_fetch_recommendations"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="8sp"
		/>

	<!-- swipe only unswiped -->
	<!--<item-->
		<!--android:id="@+id/menu_surf"-->
		<!--android:icon="@drawable/note_happy_colored"-->
		<!--android:title="@string/fab_swipe_remaining"-->
		<!--android:layout_width="wrap_content"-->
		<!--android:layout_height="wrap_content"-->
		<!--/>-->

	<!-- swipe all in current card -->
	<item
		android:id="@+id/menu_resurf"
		android:icon="@drawable/notes_hearts_colorful"
		android:title="@string/fab_swipe_all"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="8sp"
		/>

	<item
		android:id="@+id/menu_create_playlist"
		android:icon="@drawable/basic_plus"
		android:title="@string/fab_create"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="8sp"
		/>

</menu>