<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:button="http://schemas.android.com/apk/res-auto"
	android:background="@color/rosa">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/scrollview_padding_top"
		android:paddingBottom="80dp"
		>

		<TextView
			android:text="@string/title_profile_frag"
			style="@style/FragmentTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/colorPrimary"
			/>

		<!-- BODY: audio stats -->
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="20dp"
			android:paddingBottom="20dp"
			android:paddingStart="15dp"
			android:paddingEnd="15dp"
			>

			<com.cziyeli.songbits.profile.EditTrackStatsView
				android:id="@+id/stats_container_left"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:minWidth="100dp"
				android:clickable="true"
				android:focusable="true"
				app:two_column="true"
				app:set="first"
				app:movable="true"
				>
			</com.cziyeli.songbits.profile.EditTrackStatsView>

			<com.cziyeli.songbits.profile.EditTrackStatsView
				android:id="@+id/stats_container_right"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:minWidth="100dp"
				android:clickable="true"
				android:focusable="true"
				app:two_column="true"
				app:set="second"
				app:movable="true"
				>
			</com.cziyeli.songbits.profile.EditTrackStatsView>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			>

			<com.cziyeli.songbits.base.RoundedCornerButton
				android:id="@+id/action_get_recommended"
				android:text="@string/action_get_recommended"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:layout_height="54dp"
				style="@style/SummaryButton"
				button:bg_color="@color/colorPrimary"
				button:rounded_border_color="@color/colorPrimaryShade"
				/>

			<com.cziyeli.songbits.base.RoundedCornerButton
				android:id="@+id/action_reset"
				android:text="@string/action_reset_recommended"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="54dp"
				style="@style/SummaryButton"
				button:bg_color="@color/colorPurple"
				button:rounded_border_color="@color/persian_blue"
				android:layout_marginStart="10dp"
				/>

		</LinearLayout>

		<!-- Recommendations based on stats -->
		<com.cziyeli.songbits.stash.SimpleCardWidget
			android:id="@+id/recommended_tracks_card"
			android:visibility="gone"
			tools:visibility="visible"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:focusable="true"
			app:menu_res="@menu/menu_recommended"
			>
		</com.cziyeli.songbits.stash.SimpleCardWidget>

	</LinearLayout>

</android.support.v4.widget.NestedScrollView>


